--- a/client/src/component/searchbar/searchbar.css
+++ b/client/src/component/searchbar/searchbar.css
@@ -87,11 +87,11 @@
   width: 100% !important;
   max-width: 700px !important;
   height: 100%;
+  max-height: 85px !important;
   display: grid !important;
   grid-template-columns: 1fr 1.5fr .3fr !important;
   row-gap: 1rem !important;
   border-radius: var(--radius);
-
   min-width: 300px !important;
 }
 .homeSearch button:nth-last-child(1){
